@@ -1,3 +1,9 @@
+2014-01-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/59625
+	* config/i386/i386.c (ix86_avoid_jump_mispredicts): Don't consider
+	asm goto as jump.
+
 2014-01-01  Jakub Jelinek  <jakub@redhat.com>
 
 	PR rtl-optimization/59647
